# prompt-weave

./: .gitignore  .vscodeignore  LICENSE  PROMPT-WEAVE-PLAN.md  README.md  package-lock.json  package.json  tsconfig.json
python/: pyproject.toml
python/prompt_weave/: __init__.py  cli.py  core.py
python/tests/: test_core.py
snippets/: base.md  docker.md  git.md  powershell.md  python.md
src/: extension.ts  pythonRunner.ts
